@@ -2,6 +2,7 @@
 # This is free software with ABSOLUTELY NO WARRANTY.
 # You can redistribute it and/or modify it under the terms of the GNU GPL 2.
 
+=begin
 $LOAD_PATH.unshift '..' unless $LOAD_PATH.include? '..'
 
 require 'qwik/db-searchwords.rb'
@@ -171,3 +172,4 @@ if defined?($test) && $test
 
   end
 end
+=end
